Deluge 0.9.05 - "1.0.0_RC5" (In Development)
 Core:
  * Fix deluged running with ssh X forwarding by removing the Gnome lib import
  * Save resume data periodically to help prevent data loss
  
 Plugins:
  * Improve the Blocklist plugin preferences page.
  
Deluge 0.9.04 - "1.0.0_RC4" (29 July 2008)
 Core:
  * Fix building with gcc 4.3
  * Fix do not create torrentfiles folder unless 'copy_torrent_file' is True

 GtkUI:
  * Add drag n' drop support for adding .torrent files
  * Double-clicking on host in ConnectionManager now will connect to that host
  * Fix selecting torrents when right-clicking on them in torrentview and filestab
  * Fix new release check
  * Display 'total_wanted' instead of 'total_size' in Size column
  * Fix displaying of torrents when language is not English
  * Fix the view options to be persistent between sessions
  * Fix signalreceiver when switching between daemons
  
Deluge 0.9.03 - "1.0.0_RC3" (21 July 2008)
 Core:
  * File progress fixes from libtorrent
  * Fix building on FreeBSD
  * Fix #350 stop seeds when stop ratio is reached
  * Fix #358 properly emit torrent_removed signal when remove_at_ratio happens
  
 UI:
  * Default to gtkui when running 'deluge' instead of defaulting to last used.

 GtkUI:
  * Fix open folder
  * Fix #349 tab ordering when hiding/showing

 Windows:
  * Fix torrent file association and adding files from command line
  
 Plugins:
  * Blocklist plugin has been rewritten
  
 Misc:
  * Some changes for python 2.6 compatibility
  
Deluge 0.9.02 - "1.0.0_RC2" (15 July 2008)
 Core:
  * Fix displaying of file progress
  * Fix files to have proper read/write permissions

 WebUI:
  * Include missing 'classic' template
  * Update options tab to include queue settings

 Windows:
  * Fix displaying of tray icon
  * Fix scrolling of tray menu
  * Fix hiding of tray icon when shutting down
  * Fix tray icon tool tip length to show properly